Update Fron End

--- a/pages/form-buka-toko.html
+++ b/pages/form-buka-toko.html
@@ -31,9 +31,8 @@
           </div>
 
           <div class="section-body">
-            <div class="row">
-              <div class="col-2"></div>
-              <div class="col-8">
+            <div class="row justify-content-md-center">
+              <div class="col-12 col-md-6 col-sm-12">
                 <div class="card">
                   <form id="buka-toko">
                     <div class="card-body">
@@ -188,7 +187,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="/assets/js/stisla.js"></script>
-  <script src="/assets/js/general/main.js" type="module"></script>
 
   <!-- JS Libraies -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
