--- a/pages/undangan.html
+++ b/pages/undangan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Pengaturan &mdash; ZonArt</title>
+  <title>Undangan Rekrut &mdash; ZonArt</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -26,35 +26,22 @@
       <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Pengaturan</h1>
+            <h1>Undangan Rekrut</h1>
           </div>
 
           <div class="section-body">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="card card-large-icons">
-                  <div class="card-icon bg-primary text-white">
-                    <i class="fas fa-lock"></i>
-                  </div>
-                  <div class="card-body">
-                    <h4>Password</h4>
-                    <p></p>
-                    <a href="/pages/password.html" class="card-cta">Ganti Password <i class="fas fa-chevron-right"></i></a>
-                  </div>
+            <div class="row justify-content-md-center">
+              <div class="col-12 col-md-6 col-sm-12">
+                  <div class="card">
+                      <div class="card-body">
+                        <div class="empty-state" data-height="400">
+                          <div class="empty-state-icon">
+                            <i class="fas fa-briefcase"></i>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="card card-large-icons">
-                  <div class="card-icon bg-primary text-white">
-                    <i class="fas fa-user-edit"></i>
-                  </div>
-                  <div class="card-body">
-                    <h4>Profil</h4>
-                    <p></p>
-                    <a href="/pages/profil.html" class="card-cta text-primary">Update Profil <i class="fas fa-chevron-right"></i></a>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </section>
@@ -76,7 +63,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
   <!-- Page Specific JS File -->
-  <script src="/assets/js/custom-page/pengaturan.js" type="module"></script>  
+  <script src="/assets/js/custom-page/undangan.js" type="module"></script>
 
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
