--- a/pages/notifikasi.html
+++ b/pages/notifikasi.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Pengaturan &mdash; ZonArt</title>
+  <title>Notifikasi &mdash; ZonArt</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- CSS Libraries -->
+  <link rel="stylesheet" href="/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/node_modules/datatables.net-select-bs4/css/select.bootstrap4.min.css">
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -26,35 +28,25 @@
       <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Pengaturan</h1>
+            <h1>Notifikasi</h1>
           </div>
 
           <div class="section-body">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="card card-large-icons">
-                  <div class="card-icon bg-primary text-white">
-                    <i class="fas fa-lock"></i>
-                  </div>
+            <div class="row justify-content-md-center">
+              <div class="col-12 col-md-12 col-sm-12">
+                <div class="card">
                   <div class="card-body">
-                    <h4>Password</h4>
-                    <p></p>
-                    <a href="/pages/password.html" class="card-cta">Ganti Password <i class="fas fa-chevron-right"></i></a>
+                    <div class="table-responsive">
+                      <table class="table table-striped" id="table-notifikasi">
+                        <tbody>
+                          
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6">
-                <div class="card card-large-icons">
-                  <div class="card-icon bg-primary text-white">
-                    <i class="fas fa-user-edit"></i>
-                  </div>
-                  <div class="card-body">
-                    <h4>Profil</h4>
-                    <p></p>
-                    <a href="/pages/profil.html" class="card-cta text-primary">Update Profil <i class="fas fa-chevron-right"></i></a>
-                  </div>
-                </div>
-              </div>
+
             </div>
           </div>
         </section>
@@ -74,9 +66,12 @@
   <!-- JS Libraies -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
+  <script src="/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="/node_modules/datatables.net-select-bs4/js/select.bootstrap4.min.js"></script>
 
   <!-- Page Specific JS File -->
-  <script src="/assets/js/custom-page/pengaturan.js" type="module"></script>  
+  <script src="/assets/js/custom-page/notifikasi.js" type="module"></script>
 
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
