--- a/pages/profil.html
+++ b/pages/profil.html
@@ -30,9 +30,8 @@
           </div>
 
           <div class="section-body">
-            <div class="row">
-              <div class="col-2"></div>
-              <div class="col-8">
+            <div class="row justify-content-md-center">
+              <div class="col-12 col-md-8 col-sm-12">
                 <div class="card">
                   <form id="update-profil">
                     <div class="card-body">
