--- a/pages/undangan.html
+++ b/pages/undangan.html
@@ -34,7 +34,7 @@
               <div class="col-12 col-md-6 col-sm-12">
                   <div class="card">
                       <div class="card-body">
-                        <div class="empty-state" data-height="400">
+                        <div class="empty-state">
                           <div class="empty-state-icon">
                             <i class="fas fa-briefcase"></i>
                           </div>
