--- a/pages/form-buka-toko.html
+++ b/pages/form-buka-toko.html
@@ -11,6 +11,7 @@
 
   <!-- CSS Libraries -->
   <link rel="stylesheet" href="/node_modules/select2/dist/css/select2.min.css">
+  <link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.css">
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -53,10 +54,8 @@
                       </div>
                       <div class="row">
                         <div class="form-group col-md-12 col-12">
-                          <label class="col-form-label text-md-right"
-                            >Deskripsi Toko</label
-                          >
-                          <textarea class="form-control" name="deskripsi" rows="3"></textarea>
+                          <label class="col-form-label text-md-right">Deskripsi Toko</label>
+                          <textarea class="summernote-simple" id="deskripsi" name="deskripsi"></textarea>
                         </div>
                       </div>
                       <div class="row">
@@ -192,6 +191,7 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="/node_modules/select2/dist/js/select2.full.min.js"></script>
+  <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
 
   <!-- Page Specific JS File -->
   <script src="/assets/js/custom-page/form-buka-toko.js" type="module"></script>
