Fix Bugs And Add features: grupopsi, opsi

--- a/pages/toko/pengaturan.html
+++ b/pages/toko/pengaturan.html
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="text-right">
-                <button type="button" class="btn btn-primary" onclick="updateDataToko()">Simpan</button>
+                <button type="button" class="btn btn-primary col-sm-12 col-md-12" onclick="updateDataToko()">Simpan</button>
               </div>
             </div>
           </form>
@@ -264,7 +264,7 @@
                       </select>
                     </div>
                     <div class="form-group col-md-4 col-4 col-lg-4">
-                        <input type="text" class="form-control" id="norek" placeholder="No Rekening">
+                        <input type="text" class="form-control creditcard" id="norek" placeholder="No Rekening">
                     </div>
                     <div class="form-group col-md-4 col-4 col-lg-4">
                         <input type="text" class="form-control" id="pemilik" placeholder="Pemilik">
@@ -297,8 +297,8 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="/node_modules/select2/dist/js/select2.full.min.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
@@ -306,6 +306,5 @@
 
   <!-- Page Specific JS File -->
   <script src="/assets/js/custom-page/toko/pengaturan.js" type="module"></script>
-
 </body>
 </html>
