--- a/pages/toko/galeri-create.html
+++ b/pages/toko/galeri-create.html
@@ -63,7 +63,7 @@
                     <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-2 col-lg-2"></label>
                       <div class="col-sm-12 col-md-8">
-                        <button class="btn btn-primary" onclick="addGaleri()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="addGaleri()">Simpan</button>
                       </div>
                     </div>
                   </div>
