--- a/pages/toko/produk-edit.html
+++ b/pages/toko/produk-edit.html
@@ -143,7 +143,7 @@
                     <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
                       <div class="col-sm-12 col-md-7">
-                        <button class="btn btn-primary" onclick="ubahProduk()">Simpan</button>
+                        <button class="btn btn-primary col-sm-12 col-md-12" onclick="ubahProduk()">Simpan</button>
                       </div>
                     </div>
                   </div>
