New page: Profil Toko

--- a/pages/form-buka-toko.html
+++ b/pages/form-buka-toko.html
@@ -55,7 +55,7 @@
                       <div class="row">
                         <div class="form-group col-md-12 col-12">
                           <label class="col-form-label text-md-right">Deskripsi Toko</label>
-                          <textarea class="summernote-simple" id="deskripsi" name="deskripsi"></textarea>
+                          <textarea class="form-control" id="deskripsi" name="deskripsi" rows="3"></textarea>
                         </div>
                       </div>
                       <div class="row">
@@ -191,7 +191,6 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="/node_modules/select2/dist/js/select2.full.min.js"></script>
-  <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
 
   <!-- Page Specific JS File -->
   <script src="/assets/js/custom-page/form-buka-toko.js" type="module"></script>
