--- a/pages/toko/pengaturan.html
+++ b/pages/toko/pengaturan.html
@@ -11,7 +11,6 @@
 
   <!-- CSS Libraries -->
   <link rel="stylesheet" href="/node_modules/select2/dist/css/select2.min.css">
-  <link rel="stylesheet" href="/node_modules/summernote/dist/summernote-bs4.css">
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -82,7 +81,7 @@
                       <div class="row">
                         <div class="form-group col-md-12 col-12">
                           <label class="col-form-label text-md-right">Deskripsi Toko</label>
-                          <textarea class="summernote-simple" id="deskripsi" name="deskripsi"></textarea>
+                          <textarea class="form-control" id="deskripsi" name="deskripsi" rows="3"></textarea>
                         </div>
                       </div>
                       <div class="row">
@@ -297,7 +296,6 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="/node_modules/select2/dist/js/select2.full.min.js"></script>
-  <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Template JS File -->
