--- a/pages/undangan.html
+++ b/pages/undangan.html
@@ -38,6 +38,9 @@
                           <div class="empty-state-icon">
                             <i class="fas fa-briefcase"></i>
                           </div>
+                          <div class="load-content">
+
+                          </div>
                         </div>
                       </div>
                     </div>
