--- a/pages/login.html
+++ b/pages/login.html
@@ -34,23 +34,23 @@
                 <form id="login">
                   <div class="form-group">
                     <label for="username">Username</label>
-                    <input id="username" type="text" class="form-control" name="username" tabindex="1">
+                    <input id="username" type="text" class="form-control" tabindex="1">
                   </div>
 
                   <div class="form-group">
                     <div class="d-block">
                     	<label for="password" class="control-label">Password</label>
                       <div class="float-right">
-                        <a href="auth-forgot-password.html" class="text-small">
+                        <a href="/reset-password" class="text-small">
                           Lupa Password?
                         </a>
                       </div>
                     </div>
-                    <input id="password" type="password" class="form-control" name="password" tabindex="2">
+                    <input id="password" type="password" class="form-control" tabindex="2">
                   </div>
 
                   <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
+                    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="signin()" tabindex="3">
                       Login
                     </button>
                   </div>
