--- a/pages/toko/produk.html
+++ b/pages/toko/produk.html
@@ -44,6 +44,58 @@
             </div>
           </div>
         </section>
+        <div class="modal fade" tabindex="-1" role="dialog" id="modal-grupopsi">
+          <div class="modal-dialog" role="document">
+            <form>
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Hubungkan Produk</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="form-group col-md-12 col-12">
+                      <label class="col-form-label text-md-right">Hubungkan <span id="namaProduk"></span> ke produk</label>
+                      <input type="text" id="idProduk" hidden>
+                      <select class="form-control" id="data-grupopsi">
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer bg-whitesmoke br">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
+                  <button type="button" class="btn btn-primary" onclick="hubungkan(document.getElementById('idProduk').value, document.getElementById('data-grupopsi').value)">OK</button>
+                </div>
+
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="form-group col-md-12 col-12">
+                      <div class="card">
+                        <div class="card-body">
+                          <div class="section-title mt-0">Grup Opsi yang terhubung</div>
+                          <table class="table table-sm">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Grup Opsi</th>
+                                <th scope="col"></th>
+                              </tr>
+                            </thead>
+                            <tbody id="daftar-grupopsi">
+                            
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
       <footer-element class="main-footer"></footer-element>
     </div>
