update ui, new featur: pembukuan, penggajian

--- a/pages/toko.html
+++ b/pages/toko.html
@@ -42,17 +42,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card-footer text-center">
-                    <a href="#" class="btn btn-outline-info mr-1" id="btn-instagram">
-                      <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="#" class="btn btn-outline-success mr-1" id="btn-whatsapp">
-                      <i class="fab fa-whatsapp"></i>
-                    </a>
-                    <a href="#" class="btn btn-outline-danger mr-1" id="btn-email">
-                      <i class="fab fa-google"></i>
-                    </a>
-                  </div>
+                  <div class="card-footer text-center" id="info-sosmed"></div>
                 </div>
               </div>
             </div>
@@ -151,8 +141,9 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
   <script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>
-  <script src="https://cdn.rawgit.com/sachinchoolur/lg-pager.js/master/dist/lg-pager.js"></script>
+  <!-- <script src="https://cdn.rawgit.com/sachinchoolur/lg-pager.js/master/dist/lg-pager.js"></script> -->
   <script src="https://cdn.rawgit.com/sachinchoolur/lg-autoplay.js/master/dist/lg-autoplay.js"></script>
   <script src="https://cdn.rawgit.com/sachinchoolur/lg-share.js/master/dist/lg-share.js"></script>
   <script src="https://cdn.rawgit.com/sachinchoolur/lg-fullscreen.js/master/dist/lg-fullscreen.js"></script>
