--- a/pages/toko/dashboard.html
+++ b/pages/toko/dashboard.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- CSS Libraries -->
+  <link rel="stylesheet" href="/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/node_modules/datatables.net-select-bs4/css/select.bootstrap4.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -34,8 +37,163 @@
           </div>
 
           <div class="section-body">
+            <div class="row">
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                <div class="card card-statistic-1">
+                  <div class="card-icon bg-primary">
+                    <i class="fas fa-clipboard-list"></i>
+                  </div>
+                  <div class="card-wrap">
+                    <div class="card-header">
+                      <h4>Semua Pesanan</h4>
+                    </div>
+                    <div class="card-body">
+                      21
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                <div class="card card-statistic-1">
+                  <div class="card-icon bg-danger">
+                    <i class="fas fa-clock"></i>
+                  </div>
+                  <div class="card-wrap">
+                    <div class="card-header">
+                      <h4>Antrian Pesanan</h4>
+                    </div>
+                    <div class="card-body">
+                      2
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                <div class="card card-statistic-1">
+                  <div class="card-icon bg-warning">
+                    <i class="fas fa-hourglass-half"></i>
+                  </div>
+                  <div class="card-wrap">
+                    <div class="card-header">
+                      <h4>Pesanan Diproses</h4>
+                    </div>
+                    <div class="card-body">
+                      7
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+                <div class="card card-statistic-1">
+                  <div class="card-icon bg-success">
+                    <i class="fas fa-clipboard-check"></i>
+                  </div>
+                  <div class="card-wrap">
+                    <div class="card-header">
+                      <h4>Pesanan Selesai</h4>
+                    </div>
+                    <div class="card-body">
+                      10
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-12 col-sm-12">
+                <div class="card">
+                  <div class="card-header">
+                    <h4>Pembukuan</h4>
+                    <button type="button" class="btn btn-icon btn-primary" data-toggle="modal" data-target="#modal-tambah-pembukuan"><i class="fas fa-plus"></i> Pemasukan/pengeluaran</button>
+                  </div>
+                  <div class="card-body">
+                    <div class="form-group">
+                      <label>Periode</label>
+                      <input type="text" class="form-control col-12 col-sm-3 datepicker" id="periode" onchange="displayPembukuan()" data-date-format='M yyyy'>
+                    </div>
+                    <div class="statistic-details">
+                      <div class="statistic-details-item">
+                        <div class="detail-value nominal" id="total-pemasukan"></div>
+                        <div class="detail-name">Pemasukan</div>
+                      </div>
+                      <div class="statistic-details-item">
+                        <div class="detail-value nominal" id="total-pengeluaran"></div>
+                        <div class="detail-name">Pengeluaran</div>
+                      </div>
+                      <div class="statistic-details-item">
+                        <div class="detail-value nominal" id="total-laba"></div>
+                        <div class="detail-name">Saldo Laba</div>
+                      </div>
+                    </div>
+                    <div class="table-responsive">
+                      <table class="table table-striped" id="table-pembukuan">
+                        <thead>
+                          <tr>
+                            <th class="text-center">#</th>
+                            <th>Tgl Transaksi</th>
+                            <th>Keterangan</th>
+                            <th id="pemasukan">Pemasukan</th>
+                            <th id="pengeluaran">Pengeluaran</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                                                       
+                        </tbody>
+                      </table>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </section>
+
+        <div class="modal fade" tabindex="-1" role="dialog" id="modal-tambah-pembukuan">
+          <div class="modal-dialog" role="document">
+            <form>
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Tambah Pengeluaran/Pemasukan</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="form-row">
+                    <div class="form-group col-12">
+                      <label class="col-form-label text-md-right">Jenis</label>
+                      <select class="form-control" id="jenis">
+                        <option value="pengeluaran">Pengeluaran</option>
+                        <option value="pemasukan">Pemasukan</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-12">
+                      <label class="col-form-label text-md-right">Keterangan</label>
+                        <input type="text" class="form-control" id="keterangan">
+                    </div>
+                    <div class="form-group col-12">
+                      <label class="col-form-label text-md-right">Nominal</label>
+                        <input type="text" class="form-control currency" id="nominal" value="0">
+                    </div>
+                    <div class="form-group col-12">
+                      <label class="col-form-label text-md-right">Tanggal Transaksi</label>
+                      <input type="text" class="form-control" id="tglTransaksi" data-date-format='dd-mm-yyyy'>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer bg-whitesmoke br">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
+                  <button type="button" class="btn btn-primary" onclick="tambahPembukuan()">OK</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
       </div>
       <footer-element class="main-footer"></footer-element>
     </div>
@@ -52,11 +210,19 @@
   <!-- JS Libraies -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
+  <script src="/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="/node_modules/datatables.net-select-bs4/js/select.bootstrap4.min.js"></script>
+  <script src="/node_modules/cleave.js/dist/cleave.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
   <!-- Template JS File -->
   <script src="/assets/js/scripts.js"></script>
   <script src="/assets/js/custom.js"></script>
 
   <!-- Page Specific JS File -->
+  <script src="/assets/js/custom-page/toko/dashboard.js" type="module"></script>
 </body>
 </html>
